<resources>
    <string name="app_name">GymAlert</string>
    <string name="ingresar">Ingresar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="gym_alert">Gym Alert</string>
    <string name="elegir_entrenamiento">Elegir entrenamiento</string>
    <string name="hiit">Hiit</string>
    <string name="estiramiento">Estiramiento</string>
    <string name="yoga">Yoga</string>
    <string name="atr_s">Atrás</string>
    <string name="siguiente">Siguiente</string>
</resources>